# st

./: .gitignore  Cargo.toml  history.txt
src/: data.rs  main.rs
