[package]
name = "st"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
rustyline = "11.0.0"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
